Rename group i9500 maintainers to zzz-old i9500 maintainers

--- a/project.config
+++ b/project.config
@@ -2,12 +2,12 @@
 	inheritFrom = All-Projects
 [access "refs/*"]
 	owner = group zzz-old Administrators_imported
-	create = group i9500 maintainers
-	forgeCommitter = group i9500 maintainers
-	label-Code-Review = -2..+2 group i9500 maintainers
-	label-Verified = -1..+1 group i9500 maintainers
-	rebase = group i9500 maintainers
-	submit = group i9500 maintainers
+	create = group zzz-old i9500 maintainers
+	forgeCommitter = group zzz-old i9500 maintainers
+	label-Code-Review = -2..+2 group zzz-old i9500 maintainers
+	label-Verified = -1..+1 group zzz-old i9500 maintainers
+	rebase = group zzz-old i9500 maintainers
+	submit = group zzz-old i9500 maintainers
 [submit]
 	action = rebase if necessary
 [project]
